# cookiecutter-poetry-pysen

./: Dockerfile  README.md  cookiecutter.json
.github/workflows/: ci.yml
tests/: test_generate_template.sh
{{cookiecutter.package_name}}/: Makefile  pyproject.toml
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.module_name}}.py  test_{{cookiecutter.package_name}}.py
